# Lab-3-Team15

./: .env.example  .gitignore  README.md  demo.py  main.py  plan.md  pyproject.toml  requirements.txt
logs/: summary-lab3-8fc08881.json
report/group_report/: GROUP_REPORT_C403_15.md  GROUP_REPORT_TEAM15.md
report/individual_reports/: REPORT_DauVanNam.md  REPORT_LeMinhTuan.md  REPORT_NguyenTriCao.md
report/individual_reports/2A202600356/: REPORT_Cao_Diệu_Ly.md
report/individual_reports/2A202600379/: REPORT_LeMinhTuan.md
src/agent/: agent.py
src/core/: mock_provider.py
src/telemetry/: log_analysis.py  logger.py  metrics.py
src/tools/: __init__.py  flight_tools.py  mock_db.json
tests/: test_flight_tools_and_runner.py  test_log_analysis.py
