[project]
name = "lab-3-team15"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.5.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pytest>=7.4.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]
